# bignum

./: .gitignore  CMakeLists.txt  CMakePresets.json
src/: bignum.hpp
test/: bignum-benchmark.cpp  bignum-test.cpp  bignum-time.cpp  time-test.cpp
